[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/bgs/treino_screen.jpeg" type="Texture" id=1]
[ext_resource path="res://resources/others/PauDaPlacaTreino.png" type="Texture" id=2]
[ext_resource path="res://resources/buttons/bg_button_treino_pressed01.png" type="Texture" id=3]
[ext_resource path="res://resources/buttons/bg_button_treino_01.png" type="Texture" id=4]
[ext_resource path="res://scenes/treino/TreinoScreen.gd" type="Script" id=5]

[node name="TreinoScreen" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 426, 240 )
texture = ExtResource( 1 )

[node name="PauDaPlacaTreino" type="Sprite" parent="."]
position = Vector2( 389, 358 )
texture = ExtResource( 2 )

[node name="TreinarTouchButton" type="TouchScreenButton" parent="."]
position = Vector2( 257, 277 )
rotation = -0.0872665
normal = ExtResource( 4 )
pressed = ExtResource( 3 )

[node name="CountdownTimer" type="Timer" parent="."]

[node name="CountDownImage" type="Sprite" parent="."]
[connection signal="pressed" from="TreinarTouchButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_CountdownTimer_timeout"]
